--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint src --max-warnings=0",
+    "lint": "next lint --max-warnings=0",
     "postinstall": "husky install",
     "prepare": "husky install"
   },
   "lint-staged": {
-    "src/**/*.{ts, tsx}": [
+    "src/**/*": [
       "yarn lint --fix"
     ]
   },
