--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,11 @@
 {
-  "presets": [
-    "next/babel","@babel/preset-typescript"
-  ]
+  "plugins": [
+    [
+      "babel-plugin-styled-components",
+      {
+        "ssr": true
+      }
+    ]
+  ],
+  "presets": ["next/babel", "@babel/preset-typescript"]
 }
