--- a/package.json
+++ b/package.json
@@ -19,13 +19,17 @@
   },
   "lint-staged": {
     "src/**/*": [
-      "yarn eslint src --max-warnings=0 --fix", "yarn jest --findRelatedTests --bail"
+      "yarn eslint src --max-warnings=0 --fix",
+      "yarn jest --findRelatedTests --bail"
     ]
   },
   "dependencies": {
     "next": "11.1.2",
+    "next-pwa": "^5.3.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components": "^5.3.1",
+    "webpack": "4"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.15.0",
@@ -34,8 +38,10 @@
     "@testing-library/react": "^12.0.0",
     "@types/jest": "^27.0.1",
     "@types/react": "^17.0.19",
+    "@types/styled-components": "^5.1.14",
     "@typescript-eslint/eslint-plugin": "^4.30.0",
     "@typescript-eslint/parser": "^4.30.0",
+    "babel-plugin-styled-components": "^1.13.2",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "eslint-config-prettier": "^8.3.0",
@@ -44,6 +50,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^7.0.2",
     "jest": "^27.1.0",
+    "jest-styled-components": "^7.0.5",
     "lint-staged": "^11.1.2",
     "prettier": "2.3.2",
     "typescript": "^4.4.2"
